Add examination attendance and improve seating and result workflows and excel features and change across different modules